2013-05-07 19:58-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXFrameworksBuildPhase.m: Use the gnustep-config script
	everywhere to allow us to automatically use the default
	compiler.
	* Tools/pcpg/PLCPG.m: Fix an issue where mutable dictionary
	was not used.

2013-05-06 02:14-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXAbstractBuildPhase.h
	* PBXAbstractBuildPhase.m: Added missing methods for property
	showEnvVarsInLog.

2013-05-06 01:55-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXFileReference.m: -build, override buildPath pre-prending
	of project root in some cases.  This is likely due to differences
	in some versions of the xcodeproj format.

2013-05-04 20:38-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXNativeTarget.m
	* PBXResourcesBuildPhase.m: Fix issue with copying English.lproj

2013-04-24 02:39-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* NSString+PBXAdditions.h
	* NSString+PBXAdditions.m: Path manipulation methods.
	* PBXFileReference.m
	* PBXProject.m: Correct issue with handling older project files
	after last modification.

2013-04-20 23:16-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXContainerItemProxy.m
	* PBXFileReference.h
	* PBXFileReference.m: Use the compiler which was used to build
	GNUstep instead of hardcoding.
	* PBXProject.m: Proceed into target directories when doing the build
	* PBXResourcesBuildPhase.m: Copy lproj files.
	* PBXShellScriptBuildPhase.m: Improve building of 10.7 and 10.8
	(Xcode 4.4 and 4.5) style files.

2012-10-15 13:20-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GSXCBuildContext.h: Add declaration for addEntriesFromDictionary:
	* GSXCBuildContext.m: Implement addEntriesFromDictionary:
	* PBXContainerItemProxy.m: Correct warnings.
	* PBXContainer.m: Added method to collect header directories
	which need to be referenced for build.
	* PBXFileReference.m: Add code to handle INCLUDE_DIRS context
	variable.